# gen-ai

./: pyproject.toml
семинар_2/homework/: applications.csv  generator.py  prompts.py  schema.py  выводы.md
семинар_3/homework/: pipeline.py  prompts.py  schema.py  выводы.md
семинар_3/homework/output/: aspects.json  aspects_discovered.json  cache_stats.json  judge_report.json  metrics.json  reviews.json  summary.json
семинар_3/starter/: 10_prompt_caching.py  11_multi_doc.py  12_pipeline.py  2_extract_participants.py  3_evaluate_ie.py  4_extract_aspects.py  5_aspect_discovery.py  6_split_chunking.py  7_map_reduce.py  8_hierarchical_mr.py  9_judge.py  prompts.py  schema.py
семинар_4/hw/: bm25_cache_naive.json  bm25_cache_smart.json  eval.py  pipeline.py  выводы.md
семинар_4/hw/data/: gold.json
семинар_4/hw/data/corpus/: doc_01_september_2017_part1.txt  doc_02_october_2017.txt  doc_03_september_2018_part1.txt  doc_03b_september_2018_part2.txt  doc_04_september_2020_part1.txt  doc_05_september_2020_part2.txt  doc_06_october_2020.txt  doc_07_october_2021.txt  doc_08_february_2022.txt  doc_09_march_2022.txt  doc_10_august_2024.txt  doc_11_july_2025.txt  doc_12_march_2025.txt
