[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "google-genai>=1.0",
    "httpx>=0.27.0",
    "langchain-text-splitters>=0.2.0",
    "matplotlib>=3.8",
    "openai>=1.40.0",
    "pandas>=2.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=2.7.0",
    "tiktoken>=0.7",
]
